Domain deployment and layout for visualization.

--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_DEBUG           = 'true'
 APP_LANGUAGE        = 'english'
 
 # HTTPS Протокол 
-WEB_SSL_KEY           = './resources/openssl/server.crt'
-WEB_SSL_CRT           = './resources/openssl/server.csr'
-WEB_SSL_CSR           = './resources/openssl/server.key'
+WEB_SSL_KEY           = 'resources/openssl/server.key'
+WEB_SSL_CRT           = 'resources/openssl/server.crt'
+WEB_SSL_CSR           = 'resources/openssl/server.csr'
 
 # База даних
 DB_DIAL              = 'mysql'
